// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component rendering right render with empty props match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TimelineItem
    end={0}
    groupStart={0}
    iItem={0}
    start={0}
    title=""
    unitWidth={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "timeline_item_0",
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="TimelineItem__content"
        style={
                Object {
                        "borderColor": "#612DC8",
                      }
        }
>
        <span />
</div>,
      "className": "TimelineItem",
      "style": Object {
        "transform": "translateX(0px)",
        "width": 0,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <span />,
        "className": "TimelineItem__content",
        "style": Object {
          "borderColor": "#612DC8",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "",
        },
        "ref": null,
        "rendered": "",
        "type": "span",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "timeline_item_0",
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="TimelineItem__content"
          style={
                    Object {
                              "borderColor": "#612DC8",
                            }
          }
>
          <span />
</div>,
        "className": "TimelineItem",
        "style": Object {
          "transform": "translateX(0px)",
          "width": 0,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span />,
          "className": "TimelineItem__content",
          "style": Object {
            "borderColor": "#612DC8",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
          },
          "ref": null,
          "rendered": "",
          "type": "span",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`component rendering right renders props right match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TimelineItem
    end={50}
    groupStart={5}
    iItem={0}
    start={5}
    title="Study of Bendamustine"
    unitWidth={150}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "timeline_item_0",
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="TimelineItem__content"
        style={
                Object {
                        "borderColor": "#612DC8",
                      }
        }
>
        <span>
                Study of Bendamustine
        </span>
</div>,
      "className": "TimelineItem",
      "style": Object {
        "transform": "translateX(0px)",
        "width": 6750,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <span>
          Study of Bendamustine
</span>,
        "className": "TimelineItem__content",
        "style": Object {
          "borderColor": "#612DC8",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Study of Bendamustine",
        },
        "ref": null,
        "rendered": "Study of Bendamustine",
        "type": "span",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "timeline_item_0",
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="TimelineItem__content"
          style={
                    Object {
                              "borderColor": "#612DC8",
                            }
          }
>
          <span>
                    Study of Bendamustine
          </span>
</div>,
        "className": "TimelineItem",
        "style": Object {
          "transform": "translateX(0px)",
          "width": 6750,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span>
            Study of Bendamustine
</span>,
          "className": "TimelineItem__content",
          "style": Object {
            "borderColor": "#612DC8",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Study of Bendamustine",
          },
          "ref": null,
          "rendered": "Study of Bendamustine",
          "type": "span",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
